@startuml
class Jugador {
    -nombre: string
    -puntos: int
    -respuestas: ArrayList<Respuesta>

    +responder(pregunta:Pregunta, respuestaElegida:Respuesta)
    +modificarPuntaje(puntajePregunta:int):
}
Jugador ..> Pregunta

MultiplicadorPorDos <-- Jugador
MultiplicadorPorTres <-- Jugador
Jugador -> GestorAnulador
GestorExclusividad <- Jugador
class GestorAnulador {
    -usosDisponiblesAnulador: int
    +gestarActivacion(pregunta:Pregunta, jugador:Jugador)
}
class GestorExclusividad {
    -usosDisponiblesExclusividad: int
    +gestarActivacion(pregunta:Pregunta, jugador:Jugador)
}
class MultiplicadorPorDos {
    -multiplicador: int
    +activar()
    +modificarPuntaje(puntaje: int): int
}
class MultiplicadorPorTres{
    -multiplicador: int
    +activar()
    +modificarPuntaje(puntaje: int): int
}
@enduml
